Z-index fix Fixed styling conflicts between bootstrap menu and jquery dialog.

--- a/awx/ui/static/less/ansible-ui.less
+++ b/awx/ui/static/less/ansible-ui.less
@@ -766,7 +766,7 @@ select.page-size {
    http://stackoverflow.com/questions/8878033/how-to-make-twitter-bootstrap-menu-dropdown-on-hover-rather-than-click
 */
 
-  .dropdown-toggle:hover .dropdown-menu, .dropdown:hover .dropdown-menu {
+/*  .dropdown-toggle:hover .dropdown-menu, .dropdown:hover .dropdown-menu {
      display: block;
   }
 
@@ -778,7 +778,7 @@ select.page-size {
      margin-top: 0;
      z-index: 200;
   }
-
+*/
 /* end */
 
 
