--- a/awx/ui/static/less/jquery-ui-overrides.less
+++ b/awx/ui/static/less/jquery-ui-overrides.less
@@ -1,9 +1,9 @@
 /*********************************************
  *  Copyright (c) 2014 AnsibleWorks, Inc.
- *  
+ *
  *  jquery-ui-overrides.less
- *  
- *  Additions to the custom-theme to make things 
+ *
+ *  Additions to the custom-theme to make things
  *  look closer to Twitter Bootstrap
  *
  */
@@ -15,7 +15,7 @@ table.ui-datepicker-calendar {
 
 /* Modal dialog */
 
-.ui-dialog-title { 
+.ui-dialog-title {
     font-size: 22px;
     color: @blue;
     font-weight: bold;
@@ -90,8 +90,8 @@ table.ui-datepicker-calendar {
 }
 
 .ui-widget-content {
-    a, 
-    a:visited, 
+    a,
+    a:visited,
     a:active {
         color: @blue;
         text-decoration: none;
@@ -123,4 +123,8 @@ table.ui-datepicker-calendar {
 
 .ui-spinner a.ui-spinner-button {
     border-left: 1px solid #A6C9E2;
+}
+
+.ui-front {
+    z-index: 1100;
 }
