--- a/awx/ui/static/less/main-layout.less
+++ b/awx/ui/static/less/main-layout.less
@@ -62,6 +62,7 @@ body {
 
 #account-submenu {
     margin-right: 5px;
+    height: 140px;   /* shouldn't need this, but for some reason we do */
 }
 
 @media (max-width: 1075px) {
